--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,10 @@
             margin: 3px 0;
             transition: all 0.3s ease;
         }
+
+        .dark .hamburger-line {
+            background-color: #992800;
+        }
         
         /* X animation classes */
         .mobile-menu-open .hamburger-line:nth-child(1) {
