qr code link chnage

--- a/qr.html
+++ b/qr.html
@@ -43,7 +43,7 @@
         // Generate QR code when the page loads
         window.onload = function() {
             var qrcode = new QRCode(document.getElementById("qrcode"), {
-                text: "https://portfolio-website-eosin-rho.vercel.app/index.html", 
+                text: "https://stefantrajkovski.com", 
                 width: 256,
                 height: 256,
                 colorDark : "#0F766E",
