fixed the nav bar in laptop version 1024 px

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="overflow-x-hidden px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <a href="index.html" class="text-xl font-bold text-teal-700 dark:text-[#992800] sm:text-2xl md:text-3xl font-poppins">Stefan Trajkovski</a>
-                <div class="hidden space-x-20 md:flex font-poppins">
+                <div class="hidden space-x-8 xl:space-x-20 md:flex font-poppins">
                     <a href="index.html" class="relative text-lg text-gray-900 dark:text-[#e4e2dd] group">
                         Home
                         <span class="absolute bottom-0 left-1/2 w-1/2 h-0.5 bg-teal-600 dark:bg-[#992800] transition-all duration-300 origin-center"></span>
