--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                             <div class="grid gap-8 items-center md:gap-12 md:grid-cols-2">
                                 <!-- Text Content -->
                                 <div class="space-y-6 text-center md:space-y-8 md:text-left">
-                                    <h1 class="text-3xl font-bold md:text-4xl typing-container">
+                                    <h1 class="text-2xl font-bold sm:text-3xl md:text-4xl typing-container">
                                         <div class="gradient-text">Hello, I'm</div>
                                         <div>
                                             <span class="gradient-text">Stefan </span>
