--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         <div class="absolute top-0 left-32 w-96 h-96 bg-pink-100 rounded-full opacity-70 mix-blend-multiply filter blur-xl animate-blob animation-delay-4000"></div>
 
                         <!-- Main Content -->
-                        <div class="relative p-8 md:p-12 rounded-3xl shadow-2xl backdrop-blur-lg bg-white/80 dark:bg-[#363636]/90 dark:text-white md:p-20">
+                        <div class="relative p-8 rounded-3xl shadow-2xl backdrop-blur-lg bg-white/80 dark:bg-[#363636]/90 dark:text-white md:p-20">
                             <div class="grid gap-8 items-center md:gap-12 md:grid-cols-2">
                                 <!-- Text Content -->
                                 <div class="space-y-6 text-center md:space-y-8 md:text-left">
