--- a/projects.html
+++ b/projects.html
@@ -336,8 +336,8 @@
                     </div>
                     <!-- Content -->
                     <div class="p-6">
-                        <h3 class="mb-2 text-xl font-bold text-gray-900 dark:text-white group-hover:text-teal-600 dark:group-hover:text-[#992800] transition-colors duration-300">Future Innovation</h3>
-                        <p class="mb-4 text-gray-600 dark:text-gray-300">Another exciting project in the pipeline. Check back later for more details!</p>
+                        <h3 class="mb-2 text-xl font-bold text-gray-900 dark:text-white group-hover:text-teal-600 dark:group-hover:text-[#992800] transition-colors duration-300">Project in Development</h3>
+                        <p class="mb-4 text-gray-600 dark:text-gray-300">New exciting project coming soon. Stay tuned for updates!</p>
                     </div>
                 </div>
             </div>
