--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,15 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <title>Projects - Stefan Trajkovski</title>
+    
+    <!-- Prevent Flash of Wrong Theme -->
+    <script>
+        // Immediately set the theme before any content loads
+        if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+            document.documentElement.classList.add('dark');
+        }
+    </script>
+    
     <link rel="icon" type="image/png" href="assets/ST_Logo_Initials.png" sizes="48x48">
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
