made the work experience better

--- a/experience.html
+++ b/experience.html
@@ -151,15 +151,84 @@
         <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
             <!-- Work Experience Section -->
             <section class="py-16">
-                <h2 class="mb-12 text-3xl font-bold text-center text-gray-900 dark:text-white">Work Experience</h2>
-                <div class="p-8 mx-auto max-w-3xl bg-white dark:bg-[#363636] rounded-xl shadow-lg">
+                <h2 class="mb-12 text-3xl font-bold text-center text-gray-800 dark:text-[#e4e2dd]">Work Experience</h2>
+                <div class="p-8 mx-auto max-w-3xl bg-white dark:bg-[#363636] rounded-xl shadow-lg border-t-4 border-teal-600 dark:border-[#3c7f72]">
                     <div class="mb-6">
-                        <h3 class="text-2xl font-semibold text-teal-600 dark:text-[#992800]">Fullstack Developer</h3>
-                        <p class="mt-2 text-gray-600 dark:text-gray-400">July 1, 2023 - October 30, 2023</p>
-                        <div class="mt-4">
-                            <p class="text-gray-700 dark:text-gray-300">
-                                Worked as a Fullstack Developer, contributing to various web development projects and gaining hands-on experience with both frontend and backend technologies.
-                            </p>
+                        <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-6">
+                            <div class="flex items-center space-x-3">
+                                <div class="p-3 rounded-full bg-gradient-to-br from-[#3c7f72]/20 to-[#3c7f72]/5 dark:from-[#3c7f72]/30 dark:to-[#3c7f72]/10">
+                                    <i class="fas fa-code text-2xl text-[#3c7f72] dark:text-[#3c7f72]"></i>
+                                </div>
+                                <h3 class="text-2xl font-semibold text-gray-800 dark:text-[#e4e2dd]">Fullstack Developer</h3>
+                            </div>
+                            <div class="mt-2 md:mt-0 flex items-center space-x-2">
+                                <a href="https://scoolia.com" target="_blank" class="text-lg font-medium text-[#3c7f72] dark:text-[#3c7f72] hover:text-teal-700 dark:hover:text-teal-500 transition-colors duration-300">@Scoolia</a>
+                                <span class="text-gray-400">•</span>
+                                <span class="text-gray-600 dark:text-gray-400">July - October 2023</span>
+                            </div>
+                        </div>
+                        <div class="space-y-6">
+                            <div class="p-6 bg-gradient-to-r from-[#3c7f72]/5 to-transparent dark:from-[#3c7f72]/10 dark:to-transparent border-l-2 border-[#3c7f72] rounded-r-lg">
+                                <p class="text-gray-700 dark:text-gray-300">
+                                    Worked as a Fullstack Developer at Scoolia, an innovative educational technology company, contributing to various web development projects and gaining hands-on experience with both frontend and backend technologies.
+                                </p>
+                            </div>
+                            
+                            <div class="space-y-4">
+                                <h4 class="flex items-center text-lg font-semibold text-gray-800 dark:text-[#e4e2dd]">
+                                    <span class="mr-2">
+                                        <i class="fas fa-tasks text-[#3c7f72]"></i>
+                                    </span>
+                                    Key Responsibilities & Achievements
+                                </h4>
+                                <ul class="space-y-3 list-none">
+                                    <li class="flex items-start space-x-2">
+                                        <span class="mt-1.5 h-1.5 w-1.5 rounded-full bg-[#3c7f72]"></span>
+                                        <span class="text-gray-700 dark:text-gray-300">Developed and maintained responsive web applications using modern web technologies</span>
+                                    </li>
+                                    <li class="flex items-start space-x-2">
+                                        <span class="mt-1.5 h-1.5 w-1.5 rounded-full bg-[#3c7f72]"></span>
+                                        <span class="text-gray-700 dark:text-gray-300">Collaborated with cross-functional teams to implement new features and improve existing functionality</span>
+                                    </li>
+                                    <li class="flex items-start space-x-2">
+                                        <span class="mt-1.5 h-1.5 w-1.5 rounded-full bg-[#3c7f72]"></span>
+                                        <span class="text-gray-700 dark:text-gray-300">Worked with both frontend (Vue, JavaScript) and backend (PHP, Laravel) technologies</span>
+                                    </li>
+                                    <li class="flex items-start space-x-2">
+                                        <span class="mt-1.5 h-1.5 w-1.5 rounded-full bg-[#3c7f72]"></span>
+                                        <span class="text-gray-700 dark:text-gray-300">Participated in code reviews and contributed to improving development processes</span>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="space-y-4">
+                                <h4 class="flex items-center text-lg font-semibold text-gray-800 dark:text-[#e4e2dd]">
+                                    <span class="mr-2">
+                                        <i class="fas fa-tools text-[#3c7f72]"></i>
+                                    </span>
+                                    Technologies Used
+                                </h4>
+                                <div class="flex flex-wrap gap-2">
+                                    <span class="px-4 py-2 text-sm font-medium text-[#3c7f72] bg-[#3c7f72]/10 dark:bg-[#3c7f72]/20 rounded-lg border border-[#3c7f72]/20 hover:bg-[#3c7f72]/20 transition-colors duration-300">
+                                        <i class="fab fa-vuejs mr-1 text-[#41B883]"></i>Vue.js
+                                    </span>
+                                    <span class="px-4 py-2 text-sm font-medium text-[#3c7f72] bg-[#3c7f72]/10 dark:bg-[#3c7f72]/20 rounded-lg border border-[#3c7f72]/20 hover:bg-[#3c7f72]/20 transition-colors duration-300">
+                                        <i class="fab fa-js mr-1 text-[#F7DF1E]"></i>JavaScript
+                                    </span>
+                                    <span class="px-4 py-2 text-sm font-medium text-[#3c7f72] bg-[#3c7f72]/10 dark:bg-[#3c7f72]/20 rounded-lg border border-[#3c7f72]/20 hover:bg-[#3c7f72]/20 transition-colors duration-300">
+                                        <i class="fab fa-php mr-1 text-[#777BB3]"></i>PHP
+                                    </span>
+                                    <span class="px-4 py-2 text-sm font-medium text-[#3c7f72] bg-[#3c7f72]/10 dark:bg-[#3c7f72]/20 rounded-lg border border-[#3c7f72]/20 hover:bg-[#3c7f72]/20 transition-colors duration-300">
+                                        <i class="fab fa-laravel mr-1 text-[#FF2D20]"></i>Laravel
+                                    </span>
+                                    <span class="px-4 py-2 text-sm font-medium text-[#3c7f72] bg-[#3c7f72]/10 dark:bg-[#3c7f72]/20 rounded-lg border border-[#3c7f72]/20 hover:bg-[#3c7f72]/20 transition-colors duration-300">
+                                        <i class="fas fa-database mr-1 text-[#00758F]"></i>MySQL
+                                    </span>
+                                    <span class="px-4 py-2 text-sm font-medium text-[#3c7f72] bg-[#3c7f72]/10 dark:bg-[#3c7f72]/20 rounded-lg border border-[#3c7f72]/20 hover:bg-[#3c7f72]/20 transition-colors duration-300">
+                                        <i class="fab fa-git-alt mr-1 text-[#F05032]"></i>Git
+                                    </span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -170,30 +239,41 @@
                 <h2 class="mb-12 text-3xl font-bold text-center text-gray-900 dark:text-white">Hackathon Participations</h2>
                 <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
                     <!-- Sava Osiguruvanje Hackathon -->
-                    <div class="p-6 bg-white dark:bg-[#363636] rounded-xl shadow-lg">
+                    <div class="p-6 bg-white dark:bg-[#363636] rounded-xl shadow-lg transform transition-all duration-300 hover:-translate-y-2 hover:shadow-xl">
                         <h3 class="mb-4 text-xl font-semibold text-teal-600 dark:text-[#992800]">Sava Osiguruvanje Hackathon</h3>
+                        <div class="mb-4">
+                            <span class="inline-block px-3 py-1 mb-2 text-sm text-white bg-teal-600 dark:bg-[#992800] rounded-full">48-Hour Challenge</span>
+                        </div>
                         <p class="mb-6 text-gray-700 dark:text-gray-300">
                             Participated as a Frontend Developer using React. Worked on implementing a web application based on provided Figma designs within a 48-hour timeframe.
                         </p>
-                        <img src="assets/certificates/Sava-osiguruvanje_certificate.webp" alt="Sava Osiguruvanje Certificate" class="w-full rounded-lg shadow-md">
+                        <img src="assets/certificates/Sava-osiguruvanje_certificate.webp" alt="Sava Osiguruvanje Certificate" class="w-full rounded-lg shadow-md transition-transform duration-300 hover:scale-105">
                     </div>
 
                     <!-- Sparkasse Hackathon -->
-                    <div class="p-6 bg-white dark:bg-[#363636] rounded-xl shadow-lg">
+                    <div class="p-6 bg-white dark:bg-[#363636] rounded-xl shadow-lg transform transition-all duration-300 hover:-translate-y-2 hover:shadow-xl">
                         <h3 class="mb-4 text-xl font-semibold text-teal-600 dark:text-[#992800]">Sparkasse Hackathon</h3>
+                        <div class="mb-4">
+                            <span class="inline-block px-3 py-1 mb-2 text-sm text-white bg-teal-600 dark:bg-[#992800] rounded-full">48-Hour Challenge</span>
+                        </div>
                         <p class="mb-6 text-gray-700 dark:text-gray-300">
                             Served as a Frontend Developer using React. Successfully delivered a web application following Figma designs in a 48-hour competition.
                         </p>
-                        <img src="assets/certificates/Sparkasse_certificate.webp" alt="Sparkasse Certificate" class="w-full rounded-lg shadow-md">
+                        <img src="assets/certificates/Sparkasse_certificate.webp" alt="Sparkasse Certificate" class="w-full rounded-lg shadow-md transition-transform duration-300 hover:scale-105">
                     </div>
 
                     <!-- Embassy of Holland Hackathon -->
-                    <div class="p-6 bg-white dark:bg-[#363636] rounded-xl shadow-lg">
+                    <div class="p-6 bg-white dark:bg-[#363636] rounded-xl shadow-lg transform transition-all duration-300 hover:-translate-y-2 hover:shadow-xl">
                         <h3 class="mb-4 text-xl font-semibold text-teal-600 dark:text-[#992800]">Embassy of Holland Hackathon</h3>
+                        <div class="mb-4">
+                            <span class="inline-block px-3 py-1 mb-2 text-sm text-white bg-teal-600 dark:bg-[#992800] rounded-full">48-Hour Challenge</span>
+                        </div>
                         <p class="mb-6 text-gray-700 dark:text-gray-300">
                             Contributed as a Frontend Developer using React. Developed a web application based on Figma designs during the 48-hour hackathon.
                         </p>
-                        <p class="italic text-gray-500 dark:text-gray-400">Certificate pending</p>
+                        <div class="flex items-center justify-center p-8 bg-gray-100 dark:bg-[#1e1e1e] rounded-lg">
+                            <p class="italic text-gray-500 dark:text-gray-400">Certificate pending</p>
+                        </div>
                     </div>
                 </div>
             </section>
