better cards in the experience page

--- a/experience.html
+++ b/experience.html
@@ -239,40 +239,64 @@
                 <h2 class="mb-12 text-3xl font-bold text-center text-gray-900 dark:text-white">Hackathon Participations</h2>
                 <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
                     <!-- Sava Osiguruvanje Hackathon -->
-                    <div class="p-6 bg-white dark:bg-[#363636] rounded-xl shadow-lg transform transition-all duration-300 hover:-translate-y-2 hover:shadow-xl">
-                        <h3 class="mb-4 text-xl font-semibold text-teal-600 dark:text-[#992800]">Sava Osiguruvanje Hackathon</h3>
-                        <div class="mb-4">
-                            <span class="inline-block px-3 py-1 mb-2 text-sm text-white bg-teal-600 dark:bg-[#992800] rounded-full">48-Hour Challenge</span>
+                    <div class="group relative p-6 bg-white dark:bg-[#363636] rounded-xl shadow-lg transform transition-all duration-500 hover:-translate-y-2 flex flex-col h-full">
+                        <div class="absolute inset-0 bg-gradient-to-r from-teal-600/10 to-transparent dark:from-[#992800]/10 dark:to-transparent rounded-xl transition-opacity duration-500 opacity-0 group-hover:opacity-100"></div>
+                        <div class="relative flex flex-col h-full">
+                            <div class="flex items-start justify-between mb-4 min-h-[64px]">
+                                <h3 class="text-xl font-semibold text-teal-600 dark:text-[#992800] group-hover:text-teal-700 dark:group-hover:text-[#7a2000] transition-colors duration-300 pr-4">Sava Osiguruvanje Hackathon</h3>
+                                <span class="flex items-center px-3 py-1 text-sm font-medium text-white bg-teal-600 dark:bg-[#992800] rounded-full shadow-md group-hover:bg-teal-700 dark:group-hover:bg-[#7a2000] transition-colors duration-300 whitespace-nowrap">
+                                    <i class="fas fa-clock mr-1.5"></i>48h
+                                </span>
+                            </div>
+                            <p class="mb-6 text-gray-700 dark:text-gray-300 min-h-[72px]">
+                                Participated as a Frontend Developer using React. Worked on implementing a web application based on provided Figma designs within a 48-hour timeframe.
+                            </p>
+                            <div class="relative overflow-hidden rounded-lg group-hover:ring-2 ring-teal-600/20 dark:ring-[#992800]/20 transition-all duration-300 h-[250px] mt-auto">
+                                <img src="assets/certificates/Sava-osiguruvanje_certificate.webp" alt="Sava Osiguruvanje Certificate" class="w-full h-full object-cover shadow-md transition-transform duration-500 group-hover:scale-105">
+                                <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
+                            </div>
                         </div>
-                        <p class="mb-6 text-gray-700 dark:text-gray-300">
-                            Participated as a Frontend Developer using React. Worked on implementing a web application based on provided Figma designs within a 48-hour timeframe.
-                        </p>
-                        <img src="assets/certificates/Sava-osiguruvanje_certificate.webp" alt="Sava Osiguruvanje Certificate" class="w-full rounded-lg shadow-md transition-transform duration-300 hover:scale-105">
                     </div>
 
                     <!-- Sparkasse Hackathon -->
-                    <div class="p-6 bg-white dark:bg-[#363636] rounded-xl shadow-lg transform transition-all duration-300 hover:-translate-y-2 hover:shadow-xl">
-                        <h3 class="mb-4 text-xl font-semibold text-teal-600 dark:text-[#992800]">Sparkasse Hackathon</h3>
-                        <div class="mb-4">
-                            <span class="inline-block px-3 py-1 mb-2 text-sm text-white bg-teal-600 dark:bg-[#992800] rounded-full">48-Hour Challenge</span>
+                    <div class="group relative p-6 bg-white dark:bg-[#363636] rounded-xl shadow-lg transform transition-all duration-500 hover:-translate-y-2 flex flex-col h-full">
+                        <div class="absolute inset-0 bg-gradient-to-r from-teal-600/10 to-transparent dark:from-[#992800]/10 dark:to-transparent rounded-xl transition-opacity duration-500 opacity-0 group-hover:opacity-100"></div>
+                        <div class="relative flex flex-col h-full">
+                            <div class="flex items-start justify-between mb-4 min-h-[64px]">
+                                <h3 class="text-xl font-semibold text-teal-600 dark:text-[#992800] group-hover:text-teal-700 dark:group-hover:text-[#7a2000] transition-colors duration-300 pr-4">Sparkasse Hackathon</h3>
+                                <span class="flex items-center px-3 py-1 text-sm font-medium text-white bg-teal-600 dark:bg-[#992800] rounded-full shadow-md group-hover:bg-teal-700 dark:group-hover:bg-[#7a2000] transition-colors duration-300 whitespace-nowrap">
+                                    <i class="fas fa-clock mr-1.5"></i>48h
+                                </span>
+                            </div>
+                            <p class="mb-6 text-gray-700 dark:text-gray-300 min-h-[72px]">
+                                Served as a Frontend Developer using React. Successfully delivered a web application following Figma designs in a 48-hour competition.
+                            </p>
+                            <div class="relative overflow-hidden rounded-lg group-hover:ring-2 ring-teal-600/20 dark:ring-[#992800]/20 transition-all duration-300 h-[250px] mt-auto">
+                                <img src="assets/certificates/Sparkasse_certificate.webp" alt="Sparkasse Certificate" class="w-full h-full object-cover shadow-md transition-transform duration-500 group-hover:scale-105">
+                                <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
+                            </div>
                         </div>
-                        <p class="mb-6 text-gray-700 dark:text-gray-300">
-                            Served as a Frontend Developer using React. Successfully delivered a web application following Figma designs in a 48-hour competition.
-                        </p>
-                        <img src="assets/certificates/Sparkasse_certificate.webp" alt="Sparkasse Certificate" class="w-full rounded-lg shadow-md transition-transform duration-300 hover:scale-105">
                     </div>
 
                     <!-- Embassy of Holland Hackathon -->
-                    <div class="p-6 bg-white dark:bg-[#363636] rounded-xl shadow-lg transform transition-all duration-300 hover:-translate-y-2 hover:shadow-xl">
-                        <h3 class="mb-4 text-xl font-semibold text-teal-600 dark:text-[#992800]">Embassy of Holland Hackathon</h3>
-                        <div class="mb-4">
-                            <span class="inline-block px-3 py-1 mb-2 text-sm text-white bg-teal-600 dark:bg-[#992800] rounded-full">48-Hour Challenge</span>
-                        </div>
-                        <p class="mb-6 text-gray-700 dark:text-gray-300">
-                            Contributed as a Frontend Developer using React. Developed a web application based on Figma designs during the 48-hour hackathon.
-                        </p>
-                        <div class="flex items-center justify-center p-8 bg-gray-100 dark:bg-[#1e1e1e] rounded-lg">
-                            <p class="italic text-gray-500 dark:text-gray-400">Certificate pending</p>
+                    <div class="group relative p-6 bg-white dark:bg-[#363636] rounded-xl shadow-lg transform transition-all duration-500 hover:-translate-y-2 flex flex-col h-full">
+                        <div class="absolute inset-0 bg-gradient-to-r from-teal-600/10 to-transparent dark:from-[#992800]/10 dark:to-transparent rounded-xl transition-opacity duration-500 opacity-0 group-hover:opacity-100"></div>
+                        <div class="relative flex flex-col h-full">
+                            <div class="flex items-start justify-between mb-4 min-h-[64px]">
+                                <h3 class="text-xl font-semibold text-teal-600 dark:text-[#992800] group-hover:text-teal-700 dark:group-hover:text-[#7a2000] transition-colors duration-300 pr-4">Embassy of Holland Hackathon</h3>
+                                <span class="flex items-center px-3 py-1 text-sm font-medium text-white bg-teal-600 dark:bg-[#992800] rounded-full shadow-md group-hover:bg-teal-700 dark:group-hover:bg-[#7a2000] transition-colors duration-300 whitespace-nowrap">
+                                    <i class="fas fa-clock mr-1.5"></i>48h
+                                </span>
+                            </div>
+                            <p class="mb-6 text-gray-700 dark:text-gray-300 min-h-[72px]">
+                                Contributed as a Frontend Developer using React. Developed a web application based on Figma designs during the 48-hour hackathon.
+                            </p>
+                            <div class="relative overflow-hidden rounded-lg bg-gray-100 dark:bg-[#1e1e1e] group-hover:ring-2 ring-teal-600/20 dark:ring-[#992800]/20 transition-all duration-300 h-[250px] mt-auto flex items-center justify-center">
+                                <div class="flex items-center space-x-2 text-gray-500 dark:text-gray-400">
+                                    <i class="fas fa-certificate text-2xl"></i>
+                                    <p class="italic">Certificate pending</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
