--- a/experience.html
+++ b/experience.html
@@ -77,7 +77,7 @@
     <nav class="fixed w-full bg-[#F8F7F1] dark:bg-[#292929] shadow-sm z-50">
         <div class="overflow-x-hidden px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
-                <a href="index.html" class="text-xl font-bold text-teal-700 dark:text-[#992800] sm:text-2xl md:text-3xl font-poppins">Stefan Trajkovski</a>
+                <a href="index.html" class="text-xl font-bold text-teal-700 dark:text-[#992800] sm:text-2xl md:text-3xl font-poppins 2xl:-ml-8">Stefan Trajkovski</a>
                 <div class="hidden space-x-8 xl:space-x-20 md:flex font-poppins">
                     <a href="index.html" class="relative text-lg text-gray-600 dark:text-[#e4e2dd] hover:text-gray-900 dark:hover:text-gray-300 group">
                         Home
@@ -131,12 +131,12 @@
         </div>
         <!-- Mobile menu -->
         <div id="mobile-menu" class="hidden transform transition-all duration-300 ease-in-out opacity-0 scale-95 bg-[#F8F7F1] dark:bg-[#292929] shadow-lg absolute w-full">
-            <div class="flex flex-col items-center px-2 pt-2 pb-3 space-y-3">
-                <a href="index.html" class="block px-3 py-2 w-full font-medium text-center text-gray-600 whitespace-nowrap dark:text-white hover:text-gray-900 dark:hover:text-gray-300">Home</a>
-                <a href="services.html" class="block px-3 py-2 w-full font-medium text-center text-gray-600 whitespace-nowrap dark:text-white hover:text-gray-900 dark:hover:text-gray-300">Services</a>
-                <a href="projects.html" class="block px-3 py-2 w-full font-medium text-center text-gray-600 whitespace-nowrap dark:text-white hover:text-gray-900 dark:hover:text-gray-300">Projects</a>
-                <a href="experience.html" class="block px-3 py-2 w-full font-medium text-center text-gray-900 whitespace-nowrap dark:text-white">Experience</a>
-                <a href="contact.html" class="block px-3 py-2 w-full font-medium text-center text-gray-600 whitespace-nowrap dark:text-white hover:text-gray-900 dark:hover:text-gray-300">Contact</a>
+            <div class="flex flex-col items-center pt-2 pb-3 space-y-3">
+                <a href="index.html" class="block w-full px-3 py-2 font-medium text-center text-gray-600 whitespace-nowrap dark:text-white hover:text-gray-900 dark:hover:text-gray-300">Home</a>
+                <a href="services.html" class="block w-full px-3 py-2 font-medium text-center text-gray-600 whitespace-nowrap dark:text-white hover:text-gray-900 dark:hover:text-gray-300">Services</a>
+                <a href="projects.html" class="block w-full px-3 py-2 font-medium text-center text-gray-600 whitespace-nowrap dark:text-white hover:text-gray-900 dark:hover:text-gray-300">Projects</a>
+                <a href="experience.html" class="block w-full px-3 py-2 font-medium text-center text-gray-900 whitespace-nowrap dark:text-white">Experience</a>
+                <a href="contact.html" class="block w-full px-3 py-2 font-medium text-center text-gray-600 whitespace-nowrap dark:text-white hover:text-gray-900 dark:hover:text-gray-300">Contact</a>
                 <div class="px-3 py-2 w-full">
                     <button class="bg-teal-600 dark:bg-[#992800] text-white w-full max-w-[200px] mx-auto px-4 py-1.5 text-sm rounded-md hover:bg-teal-700 dark:hover:bg-[#7a2000] font-poppins block whitespace-nowrap transition-all duration-300">
                         <a href="assets/cv/CV_Stefan_Trajkovski.pdf" download class="inline-block w-full">Download CV</a>
